<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity"
    android:background="#130912"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="24dp"
    android:paddingTop="86dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3E1C33"
            app:cardCornerRadius="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:fontFamily="@font/baloo_bhai"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3E1C33"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:fontFamily="@font/baloo_bhai"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3E1C33"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:fontFamily="@font/baloo_bhai"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#F6921D"
        android:fontFamily="@font/baloo_bhai"
        android:padding="14dp"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="#130912"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>