<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#130912"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="24dp"
    tools:context=".Activity.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/why_are_you_scare"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/avatarContainer"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="150dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#3E1C33"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <ImageView
                    android:id="@+id/avatarImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                </ImageView>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:maxWidth="400dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/avatarContainer"
                tools:layout_editor_absoluteX="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3E1C33"
                    app:cardCornerRadius="16dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="name"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/baloo_bhai"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:paddingStart="24dp"
                        android:paddingTop="18dp"
                        android:paddingEnd="24dp"
                        android:paddingBottom="18dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="16sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#3E1C33"
                    app:cardCornerRadius="16dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/baloo_bhai"
                        android:gravity="top"
                        android:hint="@string/about"
                        android:inputType="text"
                        android:minHeight="128dp"
                        android:paddingStart="24dp"
                        android:paddingTop="18dp"
                        android:paddingEnd="24dp"
                        android:paddingBottom="18dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="16sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:fontFamily="@font/baloo_bhai"
                android:text="@string/party_topics"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.chip.Chip
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Pumpkins"
                    app:chipStrokeColor="#F6921D"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Marvel"
                    app:chipStrokeColor="#F6921D"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Ghosts"
                    app:chipStrokeColor="#F6921D"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Vampires"
                    app:chipStrokeColor="#F6921D"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Witches"
                    app:chipStrokeColor="#F6921D"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Sabrine"
                    app:chipStrokeColor="#F6921D"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="The Lord of the Ring"
                    app:chipStrokeColor="#F6921D"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    style="@style/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Harry Potter"
                    app:chipStrokeColor="#F6921D"
                    app:chipStrokeWidth="2dp" />
            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#F6921D"
                android:fontFamily="@font/baloo_bhai"
                android:padding="14dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="#130912"
                android:textSize="16sp"
                android:layout_marginTop="44dp"
                app:cornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>