<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CardsFragment"
    android:background="#130912">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginTop="-36dp"
            app:cardBackgroundColor="#602749"
            app:cardCornerRadius="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/baloo_bhai"
                android:gravity="center"
                android:text="@string/trick_or_treat"
                android:textColor="@color/white"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardsContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="3dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSwipe"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="47dp"
                android:layout_marginEnd="47dp"
                android:translationY="-20dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="13dp"
                app:cardElevation="3dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/cardFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSwipe1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"

                android:layout_marginStart="47dp"
                android:layout_marginEnd="47dp"
                android:translationY="-10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@android:color/holo_blue_dark"
                app:cardCornerRadius="13dp"
                android:scaleX="0.9"
                app:cardElevation="2dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/cardFragment1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSwipe2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:translationY="0dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="47dp"
                android:layout_marginEnd="47dp"
                app:cardBackgroundColor="@android:color/holo_red_dark"
                app:cardCornerRadius="13dp"
                android:scaleX="0.8"
                app:cardElevation="1dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/cardFragment2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:backgroundTint="#3E1C33"
            app:cardCornerRadius="54dp"
            android:layout_marginStart="31dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardsContainer">
            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/rip"
                android:layout_gravity="center"
                android:contentDescription="@string/rip" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:backgroundTint="#3E1C33"
            app:cardCornerRadius="54dp"
            android:layout_marginEnd="31dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardsContainer">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/candy"
                android:layout_gravity="center"
                android:contentDescription="@string/candy" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>